[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cae-ops-contracts"
version = "0.1.0"
description = "Pydantic contract models for the cae-ops platform API surface"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
]

[project.urls]
Repository = "https://github.com/Colorado-Atlantic/cae-ops-contracts"

[tool.setuptools.packages.find]
include = ["cae_ops_contracts*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["F", "I", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
